# internal/server/server.go
@@ -26,54 +26,58 @@ func Init() {
 	router.Use(gin.Logger())
 	router.Use(gin.Recovery())
 
-	//below are optional setting, you change it or just comment it to let it as default
-	// session.SecretKey = "You any very secriet key !@#$!@%@"  //Any characters
-	// session.JwtTokenName = "YouCanChangeTokenName"               //no blank character
-	// session.DefaultFlashSessionName = "YouCanChangeTheFlashName" //no blank character
-	// session.DefaultSessionName = "YouCanChangeTheSessionName"    //no blank character
-	//end of optional setting
-
 	session.NewStore()
 	router.Use(session.ClearMiddleware()) //important to avoid mem leak
+	router.Use(sessions.Sessions("session", cookie.NewStore(globals.Secret)))
+
+	router.LoadHTMLGlob("./internal/server/api/templates/*.html")
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-	router.Use(sessions.Sessions("session", cookie.NewStore(globals.Secret)))
+	router.GET("/swagger", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	api := router.Group("/api")
 	{
-		ver1 := api.Group("/v1")
+		apiV1 := api.Group("/v1")
 		{
-			ver1.GET("/", v1.HealthCheck)
+			apiV1.GET("/", v1.HealthCheck())
 
-			tag := ver1.Group("/tag")
+			tag := apiV1.Group("/tag")
 			{
-				tag.GET("", v1.GetAllTags)
-				tag.POST("", v1.CreateTag)
-				tag.PATCH(":id", v1.UpdateTag)
-				tag.DELETE(":id", v1.DeleteTag)
-				tag.GET("/task", v1.GetTagsByTask)
+				tag.Use(middleware.Auth)
+				tag.GET("", v1.GetAllTags())
+				tag.POST("", v1.CreateTag())
+				tag.PATCH(":id", v1.UpdateTag())
+				tag.DELETE(":id", v1.DeleteTag())
+				tag.GET("/task", v1.GetTagsByTask())
 			}
-			task := ver1.Group("/task")
+			task := apiV1.Group("/task")
 			{
-				task.GET("", v1.GetAllTasks)
-				task.POST("", v1.CreateTask)
-				task.PATCH("", v1.UpdateTask)
-				task.DELETE("", v1.DeleteTask)
+				task.Use(middleware.Auth)
+				task.GET("", v1.GetAllTasks())
+				task.POST("", v1.CreateTask())
+				task.PATCH("", v1.UpdateTask())
+				task.DELETE("", v1.DeleteTask())
 			}
-			proj := ver1.Group("/project")
+			proj := apiV1.Group("/project")
 			{
-				proj.GET("", v1.GetAllProjects)
-				proj.POST("", v1.CreateProject)
-				proj.PATCH("", v1.UpdateProject)
-				proj.DELETE("", v1.DeleteProject)
+				proj.Use(middleware.Auth)
+				proj.GET("", v1.GetAllProjects())
+				proj.POST("", v1.CreateProject())
+				proj.PATCH("", v1.UpdateProject())
+				proj.DELETE("", v1.DeleteProject())
 			}
-			auth := ver1.Group("/auth")
+			authPublic := apiV1.Group("/auth")
 			{
-				auth.GET("/login", v1.LoginGetHandler())
-				auth.POST("/login", v1.LoginPostHandler())
-				auth.GET("/dashboard", v1.DashboardGetHandler())
-				auth.GET("/logout", v1.LogoutGetHandler())
-				router.Use(middleware.Auth)
+				authPublic.GET("/login", v1.LoginGetHandler())
+				authPublic.POST("/login", v1.LoginPostHandler())
+				authPublic.GET("/", v1.IndexGetHandler())
+			}
+
+			authPrivate := apiV1.Group("/auth")
+			{
+				authPrivate.Use(middleware.Auth)
+				authPrivate.GET("/dashboard", v1.DashboardGetHandler())
+				authPrivate.GET("/logout", v1.LogoutGetHandler())
 			}
 		}
 	}
